--- a/Solution/WebClient/Views/WorkDay/Index.cshtml
+++ b/Solution/WebClient/Views/WorkDay/Index.cshtml
@@ -43,39 +43,49 @@
                             </div>
 
                             @Html.AntiForgeryToken()
-                            <div class="card-body pt-0">
 
-                                <div class="form-group">
-                                    <label class="col-form-label">Date Picker</label>
-                                    <div class="input-group has-validation">
-                                        <span class="input-group-text"><i class="fa fa-calendar"></i></span>
-                                        @Html.TextBoxFor(i => i.DateRangePicker, new { @class = "form-control", @readonly = "readonly" })
+                            @if (Model.ButtonAccess.IsEdit)
+                            {
+                                <div class="card-body pt-0">
+
+                                    <div class="form-group">
+                                        <label class="col-form-label">Date Picker</label>
+                                        <div class="input-group has-validation">
+                                            <span class="input-group-text"><i class="fa fa-calendar"></i></span>
+                                            @Html.TextBoxFor(i => i.DateRangePicker, new { @class = "form-control", @readonly = "readonly" })
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-form-label">Remarks</label>
+                                        @Html.TextBoxFor(i => i.Remarks, new { @class = "form-control" })
                                     </div>
                                 </div>
-
-                                <div class="form-group">
-                                    <label class="col-form-label">Remarks</label>
-                                    @Html.TextBoxFor(i => i.Remarks, new { @class = "form-control" })
+                                <div class="card-footer text-end">
+                                    <input class="btn btn-primary btn-block w-100 " type="submit" name="Submit" value="Create" id="submitButton" />
                                 </div>
-                            </div>
-                            <div class="card-footer text-end">
-                                <input class="btn btn-primary btn-block w-100 " type="submit" name="Submit" value="Create" id="submitButton" />
-                            </div>
+                            }
+
                         </div>
 
                         <div class="card">
-                            <div class="card-body pt-0">
-                                <br />
-                                <div class="form-group">
-                                    <label class="col-form-label">Select year for genrate week end holiday</label>
-                                    @Html.DropDownListFor(i => i.Year, selectListYear, new { @class = "form-control" })
+                            @if (Model.ButtonAccess.IsCreate)
+                            {
+                                <div class="card-body pt-0">
+
+                                    <br />
+                                    <div class="form-group">
+                                        <label class="col-form-label">Select year for genrate week end holiday</label>
+                                        @Html.DropDownListFor(i => i.Year, selectListYear, new { @class = "form-control" })
+
+                                    </div>
+                                </div>
+                                <div class="card-footer text-end">
+
+                                    <input class="btn btn-primary btn-block w-100" type="submit" name="Submit" value="Generate" id="submitButton" />
 
                                 </div>
-                            </div>
-                            <div class="card-footer text-end">
-                                <input class="btn btn-primary btn-block w-100" type="submit" name="Submit" value="Generate" id="submitButton" />
-                            </div>
-
+                            }
                         </div>
                     </div>
                     <div class="col-xxl-8 col-lg-12 box-col-12">
@@ -101,16 +111,19 @@
                         <div class="card-body pt-0">
                             <div class="row m-0 overall-card">
                                 <div class="table-responsive">
-                                    <table class="display" id="datatable-workday" style="width:100%">
-                                        <thead>
-                                            <tr>
-                                                <th>DateWork</th>
-                                                <th>Is Holiday</th>
-                                                <th>Remarks</th>
-                                                <th>Action</th>
-                                            </tr>
-                                        </thead>
-                                    </table>
+                                    @if (Model.ButtonAccess.IsDelete)
+                                    {
+                                        <table class="display" id="datatable-workday" style="width:100%">
+                                            <thead>
+                                                <tr>
+                                                    <th>DateWork</th>
+                                                    <th>Is Holiday</th>
+                                                    <th>Remarks</th>
+                                                    <th>Action</th>
+                                                </tr>
+                                            </thead>
+                                        </table>
+                                    }
                                 </div>
                             </div>
                         </div>
