--- a/Solution/WebClient/Views/Home/Index.cshtml
+++ b/Solution/WebClient/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Dashboard Page";
-    Layout = "_LayoutMain";
+    ViewData["Title"] = "Dashboard";
+    Layout = "_LayoutMainCuba";
 }
 
 
