fixing dahsboard link active

--- a/Solution/WebClient/Views/Shared/Components/Navigation/Default.cshtml
+++ b/Solution/WebClient/Views/Shared/Components/Navigation/Default.cshtml
@@ -33,7 +33,7 @@
                     </li>
 
                     <li class="sidebar-list">
-                        <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Home")">
+                        <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Dashboard")">
                             <i class="fa fa-dashboard"></i>
                             <span>Dashboard</span>
                         </a>
