--- a/Solution/WebClient/Views/Shared/Components/Navigation/Default.cshtml
+++ b/Solution/WebClient/Views/Shared/Components/Navigation/Default.cshtml
@@ -138,7 +138,7 @@
                                 <span>Grant Access</span>
                             </a>
                             <ul class="sidebar-submenu">
-                                <li><a href="@Url.Action("Index","GrantAccess")">Index</a></li>
+                                <li><a href="@Url.Action("WebClient","GrantAccess")">WebClient</a></li>
 
                             </ul>
                         </li>
