--- a/Solution/WebClient/Views/WorkDay/WebClient.cshtml
+++ b/Solution/WebClient/Views/WorkDay/WebClient.cshtml
@@ -167,7 +167,7 @@
                     },
                     processing: true,
                     serverSide: true,
-                    filter: true,
+                    filter: false,
                     ordering: false,
                     columns: [
                         {
